# Group-4-job-search

./: Assignment1-jobSearch.docx  CMakeLists.txt  README.md  search_job.db
Group_4_job_search_pro/: Apply.cpp  Apply.h  CMakeLists.txt  Candidate.cpp  Candidate.h  Date.cpp  Date.h  Employer.cpp  Employer.h  Job.cpp  Job.h  Job_search_system.cpp  Job_search_system.h  User.cpp  User.h  Work_with_data_base.cpp  Work_with_data_base.h  main.cpp
job_search_group_4/: Apply.h  CMakeLists.txt  Candidate.h  Defines.h  Employer.h  Includes.h  Job.cpp  Job.h  Job_search.cpp  Job_search.h  User.cpp  User.h  Work_with_dataBase.cpp  main.cpp
